tests/snapshots/cli__completion_toggle.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/toggle_flat.flake.nix"
    - completion
    - toggle
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
rust-overlay

----- stderr -----
