tests/snapshots/cli__follow@dot_ancestor_cycle.snap
---
source: tests/cli.rs
assertion_line: 522
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/dot_ancestor_cycle.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/dot_ancestor_cycle.flake.lock"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All inputs are already deduplicated.

----- stderr -----
