tests/snapshots/cli__follow@first_nested_node.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/first_nested_node.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/first_nested_node.flake.lock"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All inputs are already deduplicated.

----- stderr -----
