tests/snapshots/cli__follow@flat_nested_flat.snap
---
source: tests/cli.rs
assertion_line: 509
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/flat_nested_flat.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/flat_nested_flat.flake.lock"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All inputs are already deduplicated.

----- stderr -----
