tests/snapshots/cli__follow@follows_cycle.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/follows_cycle.flake.nix"
    - "--lock-file"
    - "[FIXTURES]/follows_cycle.flake.lock"
    - "--diff"
    - follow
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All inputs are already deduplicated.

----- stderr -----
